--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,12 @@ public
 
 # output files
 output/
+
+# venv binarys
+src/services/bin
+src/services/lib
+src/services/lib64
+src/services/share
+
+# machine learning data
+src/services/content
