added .prettierignore & updated script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
+    "pretty": "prettier --write ./",
     "generateData": "node -r esm ./src/generateData.js",
     "generateQR": "node -r esm ./src/generateQRCodes.js",
     "start": "npx @11ty/eleventy --serve",
